[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.121569, 0.188235, 0.501961 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 205.0
margin_top = 81.0
margin_right = 307.0
margin_bottom = 183.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 102.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PAUSED"
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 102.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 102.0
margin_bottom = 102.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 16.0
margin_right = 85.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 69.0
margin_bottom = 24.0
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 69.0
margin_bottom = 52.0
text = "QUIT"

[node name="Audio" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_Quit_pressed"]
